Fix SignIn not showing

--- a/src/index.css
+++ b/src/index.css
@@ -229,7 +229,7 @@ button {
 
 .signInBar,
 .signUpBar {
-	margin-top: 3rem;
+	margin-top: 1rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -298,11 +298,9 @@ button {
 }
 
 .registerLink {
-	margin-top: 2rem;
 	color: #00cc66;
 	font-weight: 600;
 	text-align: center;
-	margin-bottom: 3rem;
 }
 
 @media (min-width: 1217px) {
